--- a/src/SConscript
+++ b/src/SConscript
@@ -22,9 +22,9 @@ includeFlags = '-I{sfmlcosun}/include/ -I{catch} -I/usr/local/include/'.format(
   catch = "extlib/Catch/include/"
 )
 
-env.Append(CCFLAGS = '-std=c++11 -Wall -Wextra ' + includeFlags)
+env.Append(CCFLAGS = '-std=c++11 -Wall -Wextra -g ' + includeFlags)
 env.Append(LIBS = ['sfml-system', 'sfml-window', 'sfml-graphics'])
-env.Append(LINKFLAGS = '-L/usr/local/softs/SFML/lib ')
+env.Append(LINKFLAGS = '-L/usr/local/softs/SFML/lib -g ')
 env.Decider('content')
 
 # Use CPPPATH to automatically detect changes in header files and rebuild cpp files that need those headers.
@@ -70,13 +70,15 @@ def DefineProgram(name, additional_src):
 
 
 DefineProgram('application', Glob('FinalApplication.cpp'))
-DefineProgram('UnitTests', Glob('Tests/UnitTests/*.cpp'))
-DefineProgram('EnvTest', Glob('Tests/GraphicalTests/EnvTest.cpp'))
-DefineProgram('AnimalTest', Glob('Tests/GraphicalTests/AnimalTest.cpp'))
-DefineProgram('SeekingTest', Glob('Tests/GraphicalTests/SeekingTest.cpp'))
+DefineProgram('EatableTest', Glob('Tests/UnitTests/EatableTest.cpp') + Glob('Tests/UnitTests/CatchTests.cpp'))
+DefineProgram('ObstacleTest', Glob('Tests/UnitTests/ObstacleTest.cpp') + Glob('Tests/UnitTests/CatchTests.cpp'))
+DefineProgram('PPSTest', Glob('Tests/GraphicalTests/PPSTest.cpp'))
+DefineProgram('ReproductionTest', Glob('Tests/GraphicalTests/ReproductionTest.cpp'))
+
 
 if env['CXX'] == 'clang++':
     analyze_cmd = "clang++ -std=c++11 -stdlib=libc++ -Wall -Wextra -Werror " + includeFlags + " -Isrc/ --analyze -Xanalyzer -analyzer-output='html' "
     file_list = ' '.join('"' + str(f) + '"' for f in all_src_files)
     analyze = env.Command("analyze.out", all_src_files, analyze_cmd + file_list, ENV = os.environ)
     env.Alias("analyze", analyze)
+
