last changes updated

--- a/res/appTest.json
+++ b/res/appTest.json
@@ -1,8 +1,8 @@
 {
-   "debug":false,
+   "debug":true,
    "simulation":{
       "time":{
-         "factor":3.0,
+         "factor":1.0,
          "max dt":0.05
       },
       "grass":{
@@ -130,7 +130,7 @@
          "mutability innate immune system":.3
       },
       "world":{
-         "size":600,
+         "size":1000,
          "texture":"grass.png",
           "debug texture":"grass.png"
       }
@@ -142,8 +142,8 @@
       "antialiasing level":4,
       "title":"INFOSV Simulation",
       "simulation":{
-         "width":600,
-         "height":600
+         "width":800,
+         "height":800
       },
       "stats":{
          "height":1
