--- a/res/appPPS.json
+++ b/res/appPPS.json
@@ -108,7 +108,7 @@
             "min":700,
             "max":1000
             },
-            "texture":"loup-blanc2.png"
+            "texture":"wolf-white2.png"
          }
       },
       "virus" : {
